--- a/base.css
+++ b/base.css
@@ -30,11 +30,12 @@ input:not(#ajouter):not(#effacer) {
 
 #ajouter, #effacer {
     height: 40px;
-    width: 100px;
+    width: 115px;
     font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
     margin: 20px;
+    outline: none;
 }
 
 .afficher {
@@ -65,4 +66,8 @@ input:not(#ajouter):not(#effacer) {
     width: 100%;
     text-align: center;
     font-size: 25px;
+}
+
+#idSup {
+    width: 70px !important;
 }
